Monkey: improve resource handling & agent init
Refactor Monkey and supporting classes to improve safety and reduce duplication. Use ProcessBuilder + redirectErrorStream and try-with-resources to reliably capture/close command output; replace many manual FileWriter/FileReader close blocks with try-with-resources. Introduce constants for delays (ANR/HPROF/initial), a tombstones path, and an unmodifiable AGENT_TYPE_MAP with parseAgentType helper; factor ApeNative/ApeU2 initialization into initApeEventSource to centralize agent setup and permission/mutation logic. Decouple synchronized bugreport/traces flags from I/O work (collect flags under lock, perform reporting after releasing lock) to avoid blocking ActivityController. Add null checks for system Context/PackageManager in AndroidDevice and small API name fixes in Config (startMutation, setInteger). Also updated native libs and monkeyq.jar; added .DS_Store in native model.